--- a/src/main/resources/templates/board/boardForm.html
+++ b/src/main/resources/templates/board/boardForm.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <form th:action="@{/board/form}" th:object="${board}" method="POST">
+    <form th:action="@{/board/form}" th:object="${board}" method="post">
         <input type="hidden" th:field="*{id}">
         <input type="hidden" name="bulletin_id" th:value="${param.bullletin_id}">
         <div class="form-group">
